Fix layout problem. Related to #17

--- a/iahx/static/css/layout.css
+++ b/iahx/static/css/layout.css
@@ -438,8 +438,7 @@ DIV.resultSet DIV.record {
     margin-bottom: 4px;
     min-height: 90px;
     height: auto;
-    float: left;
-    clear: right;
+    float: right;
     width: 100%;
 }
 DIV.resultSet DIV.record DIV.user-actions {
