--- a/iahx/static/css/styles.css
+++ b/iahx/static/css/styles.css
@@ -288,10 +288,10 @@ DIV.resultSet DIV.infoBar DIV.pagination A {
 	color: #00f;
 }
 DIV.resultSet DIV.record {
-	border-bottom: 2px solid #e5e5e5;
+	border-top: 2px solid #e5e5e5;
 }
 .record:hover {
-    background: #f4f6f8;
+    /* background: #f4f6f8; */
 }
 DIV.resultSet DIV.record DIV.user-actions A,
 DIV.resultSet DIV.record DIV.user-actions A:visited {
